--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="menu_exit">exit</string>
     <string name="menu_profile">profile</string>
     <string name="menu_settings">settings</string>
+    <string name="menu_home">home</string>
+    <string name="name">name</string>
+    <string name="nationalCode">nationalCode</string>
+    <string name="phoneNumber">phoneNumber</string>
 </resources>
