--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">DrawerProject</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_exit">exit</string>
     <string name="menu_profile">profile</string>
@@ -13,10 +12,12 @@
     <string name="item_number">Item Number</string>
     <string name="addInfo">add Information</string>
     <string name="fullname">fullName</string>
-    <string name="save">save</string>
+    <string name="register">register</string>
     <string name="showInfo">yourInformation</string>
     <string name="pink">pink</string>
     <string name="blue">blue</string>
     <string name="dark">dark</string>
     <string name="choose_theme">choose Theme</string>
+    <string name="photo">photoUrl</string>
+    <string name="change_info">change Info</string>
 </resources>
