design fragment_edit_account.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="cartNumber">شماره کارت : </string>
     <string name="shebaNumber">شماره شبا: </string>
     <string name="account_info">اطلاعات بانکی</string>
+    <string name="save">ذخیره</string>
 </resources>
