--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="enter_account_num">لطفا شماره منتخب را وارد کنید</string>
     <string name="change_account_info"> تغییر اطلاعات حساب بانکی</string>
     <string name="show_info">نمایش اطلاعات</string>
+    <string name="email">email</string>
 </resources>
