fix bug EditProfileInfoFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,25 @@
 <resources>
     <string name="app_name">DrawerProject</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="menu_exit">exit</string>
-    <string name="menu_profile">profile</string>
-    <string name="menu_settings">settings</string>
-    <string name="menu_home">home</string>
-    <string name="name">name</string>
-    <string name="nationalCode">nationalCode</string>
-    <string name="phoneNumber">phoneNumber</string>
+    <string name="menu_exit">خروج</string>
+    <string name="menu_profile">پروفایل</string>
+    <string name="menu_settings">تنظیمات</string>
+    <string name="menu_home">خانه</string>
+    <string name="name">نام</string>
+    <string name="nationalCode">کد ملی</string>
+    <string name="phoneNumber">شماره تلفن</string>
     <string name="explain">sasadfghfgftfdsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
-    <string name="item_number">Item Number</string>
-    <string name="addInfo">add Information</string>
-    <string name="fullname">fullName</string>
-    <string name="register">register</string>
-    <string name="showInfo">yourInformation</string>
-    <string name="pink">pink</string>
-    <string name="blue">blue</string>
-    <string name="dark">dark</string>
-    <string name="choose_theme">choose Theme</string>
+    <string name="item_number">تعداد آیتم در صفحه خانه</string>
+    <string name="addInfo">افزودن اطلاعات</string>
+    <string name="fullname">نام و نام خانوادگی</string>
+    <string name="register">ثبت اطلاعات</string>
+    <string name="showInfo">اطلاعات شما</string>
+    <string name="pink">صورتی</string>
+    <string name="blue">آبی</string>
+    <string name="dark">تیره</string>
+    <string name="choose_theme">انتخاب تم</string>
     <string name="photo">photoUrl</string>
-    <string name="change_info">change Info</string>
+    <string name="change_info">تغییر اطلاعات پروفایل</string>
     <string name="accountNumber">شماره حساب:</string>
     <string name="account_num">2121212121</string>
     <string name="cartNumber">شماره کارت : </string>
@@ -29,5 +29,5 @@
     <string name="enter_account_num">لطفا شماره منتخب را وارد کنید</string>
     <string name="change_account_info"> تغییر اطلاعات حساب بانکی</string>
     <string name="show_info">نمایش اطلاعات</string>
-    <string name="email">email</string>
+    <string name="email">پست الکترونیک</string>
 </resources>
